// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionColumn snapshots should render SectionColumn 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    />
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--single"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SectionColumn snapshots should render with buttons & labels 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        label
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--single"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="close"
              height="12"
              name="Close"
              width="12"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SectionColumn snapshots should render with buttons 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    />
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--single"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="close"
              height="12"
              name="Close"
              width="12"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SectionColumn snapshots should render with buttons and input connector 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    />
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--single"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
        <div
          class="css-2ro7w4 SectionColumnContent__input-connector"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp Icon Icon--neutral3"
            data-test-icon="inputs-connector"
            height="24"
            name="InputsConnector"
            width="24"
          />
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="close"
              height="12"
              name="Close"
              width="12"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
